# ChangeLog for dev-libs/eet
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/eet/ChangeLog,v 1.28 2013/04/24 08:26:45 ago Exp $

  24 Apr 2013; Agostino Sarubbo <ago@gentoo.org> eet-1.7.6.ebuild:
  Add ~ppc, wrt bug #462050

*eet-1.7.6 (07 Apr 2013)

  07 Apr 2013; Thomas Sachau (Tommy[D]) <tommy@gentoo.org> +eet-1.7.6.ebuild:
  Version bump

  01 Apr 2013; Thomas Sachau (Tommy[D]) <tommy@gentoo.org> eet-1.7.4.ebuild:
  Add missing dependency: dev-libs/libgcrypt, fixes bug 454344

*eet-1.7.4 (21 Dec 2012)

  21 Dec 2012; Thomas Sachau (Tommy[D]) <tommy@gentoo.org> -eet-1.7.2.ebuild,
  -eet-1.7.3.ebuild, +eet-1.7.4.ebuild:
  Version bump, drop old

*eet-1.7.3 (08 Dec 2012)

  08 Dec 2012; Thomas Sachau (Tommy[D]) <tommy@gentoo.org> -eet-1.7.1.ebuild,
  +eet-1.7.3.ebuild:
  Version bump, drop old

*eet-1.7.2 (23 Nov 2012)

  23 Nov 2012; Thomas Sachau (Tommy[D]) <tommy@gentoo.org> -eet-1.7.0.ebuild,
  +eet-1.7.2.ebuild:
  Version bump, drop old

*eet-1.7.1 (22 Oct 2012)

  22 Oct 2012; Thomas Sachau (Tommy[D]) <tommy@gentoo.org> -eet-1.6.1.ebuild,
  +eet-1.7.1.ebuild:
  Version bump, drop old

  10 Sep 2012; Mike Frysinger <vapier@gentoo.org> eet-1.7.0.ebuild:
  Add arm love.

*eet-1.7.0 (07 Sep 2012)

  07 Sep 2012; Thomas Sachau (Tommy[D]) <tommy@gentoo.org> -eet-1.4.1.ebuild,
  -eet-1.5.0.ebuild, +eet-1.7.0.ebuild:
  Version bump, drop old

*eet-1.6.1 (16 Jun 2012)

  16 Jun 2012; Thomas Sachau (Tommy[D]) <tommy@gentoo.org> +eet-1.6.1.ebuild:
  Version bump

*eet-1.5.0 (08 Feb 2012)

  08 Feb 2012; Thomas Sachau (Tommy[D]) <tommy@gentoo.org> -eet-1.4.0.ebuild,
  +eet-1.5.0.ebuild:
  Version bump, drop old

*eet-1.4.1 (29 May 2011)

  29 May 2011; Thomas Sachau (Tommy[D]) <tommy@gentoo.org> +eet-1.4.1.ebuild:
  Version bump

  25 Feb 2011; Kevin McCarthy <signals@gentoo.org> eet-1.4.0.ebuild:
  Update depends from media-libs/jpeg to virtual/jpeg

*eet-1.4.0 (30 Jan 2011)
