@@ -1,26 +1,18 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
-DIST eet-1.7.4.tar.bz2 575676 SHA256 6fce549e89d5828fa70c7d67696932a0b40cf4061d0564eee84b6819f60650ef SHA512 ccf57b934aa6609d2696d4912fa3349fd3d3a144f5f8067d5aca910c7df11aa6753c1332fca17d2ca056c10b49b95a0637bb333baee0ebead23efaa698ede3d7 WHIRLPOOL bf8797e1224a543a18f31718136a88b2bd166821ce794bb456ab58fa558ea0918717b11092a2bf3156fce30fff8e31fdcb528cc59afcc58dc0adc515e23c63dc
 DIST eet-1.7.6.tar.bz2 578741 SHA256 064a7b8359099baf2e52d41daae6102b19c878cac5b22cf1e05e78ea83f82a9a SHA512 73e12478816fdbe69a1e375479433e4de483454e7c9ee8f50f2a3355144db5714955dcd961830426f778adcd7aa6fc2859c365be432c2a3283d6abcddc65ce37 WHIRLPOOL dce07745139ab79346766b68ccf0e63f46b5ed6a183a2885e4b259288d18d36db9d14e29feda88d00001ca6c2a3c7a578a9c3c8b69fe5be05b5128d4fc980444
-EBUILD eet-1.7.4.ebuild 1501 SHA256 ff3ad4ce84b116cdaedcd7f4f0fbeda3be5f363e1879e59f62600962963b13c0 SHA512 0ed09e2a45c4f1d278835614a00e06acfd72280cb17d43341a9f07f4137704bc8007e55d5996af2d5aa7bc60ac22250aa2a6f8c3f0a1093867840318eee4d1e7 WHIRLPOOL 6d1353ba21cf42223d9cfa16593acf745fea1dd3011f72156cc67341b6155876f04ff6d5bdf9339c5d6224268a5786da53f1d6da82bfd6898aac77755988ced2
+DIST eet-1.7.8.tar.bz2 573161 SHA256 fd075dcd083d814e81d0ad7888de13ffc6f4a5453fedf905e650ab40369c773b SHA512 d5d781b32313f77310fd2273d79955004c985eacef3324ca8ad56c22be235a657a1366cb2f53ee93c16bd19fbc895e8db3b5d4563f7645f552360cb0e06720b1 WHIRLPOOL 60e66cd9641bcdf8ccb1904766612fef563550c9df0492bd1d70dc41085d84e55d21a235ded67430a47b09ebf6c7a0f8dd466a2b9dc0e16a89c94dcc64f5897f
 EBUILD eet-1.7.6.ebuild 1504 SHA256 fd12334a2de3ae73f1607deea5b317a262fe46a43ab2b25523ff9bfaf5213a13 SHA512 9c2ef844c1f097bc10caa5509dd318220b374c4f612e4a25793da0df1cdde0fa835b5e819db248609059aadb1b73beead4619b19683cdca82492c0a2b5f82be2 WHIRLPOOL 4e5154fc5250be1b04de5522e2d268e2a97f532b5c450b95366ad6fb56e7d5dcab0f35cdb80f2ea419f2f9f7712fd266130d5c4d239a83c5792623fb2e4d82fb
-MISC ChangeLog 2428 SHA256 43989e81bc219d7984600653faf3f2a4f6f9156f0e5441423df42dcece4b389d SHA512 a0eb2b0351a12a6d16810bc28522458ef757f8646ed73c99d3e1b42a8dbee7929f6048741147cb4a628a01102c180d6e6b1c5c290baa27a4cf104591ae6534dc WHIRLPOOL b48ff759e64b772877b29f0ad8d5c3a259df46d98872afc186d910b175f029b4fd1c5536627edbebb5ded0a8d17d017751472720c97e4f5f7f8759cb78c11499
+EBUILD eet-1.7.8.ebuild 1506 SHA256 2da8b829d84850d98c32e58ed1557da17c8aca108777d87e0da619da2ff83558 SHA512 73beae65427dd4a24f58ff1872fed32d5dac46d57e9097cf8e7f0af3dc1161781df8245165fdadb20d73a4ba2c138d9f7d629ab49561df8115ed80a36805f3b3 WHIRLPOOL b5945ebfc5b19c8bc1520c32c774289100c38d861297b1f7f0e3b96da0e225676a8efb65b76fe02ffb0f9684a3f5187bc367c2b68166e9192f54877e9b85f909
+MISC ChangeLog 2581 SHA256 b3af4709f0bfa0d1f2e24aaa4173cd8ec13d2425b2ba74efd369ca0ff5bfe7c4 SHA512 54810e6ffddf7bda70fc967790381700c58fa45da04921804607c5add354e59a06e5a4a11546fd47e2f39e648a9d1c8af5f0d4ef660af592b63b95a6f07510b7 WHIRLPOOL 7b0b06e25ffea7311928d2381a41985fe9495691a787514318b85b46f5580878e9fdc51c48aea81f74fea7fc2137921d11a23f1b73502d2e02230c9072a0f993
 MISC metadata.xml 1287 SHA256 2b46605b1eff9453c1d2cb1ef99a57d6120980b4899c8cbdb1bdf5036f753206 SHA512 f0a5b6e98540ba9dc6f73358846cce36576aeda9853766c2e7ca08349c9f63f0539e6f9876339041b10c6e7b246d4490883477590d1bd9c0d20204b4853a56e2 WHIRLPOOL cabf790fefca7075424bd4f5a8b35b7468a61dd4929120ad610488531e27c2829ede0a9084bdc54c913e8bdece93d751a92380a01e1b56080a0be316bdbe961e
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0.20 (GNU/Linux)
 
-iQIcBAEBCgAGBQJRd5apAAoJELp701BxlEWfvkMP/jpJsXhcxnjVb+rMULEJocfO
-Daw7SpbNtOFjaiTVeAG9K7aBWVRZAOISbHznBSU4WZkSufKoN+ciwVuOqdsccjKR
-Eib476KSaCu2ypOfiNGIpXvTRrReVlsAcj3taNRSTj3D/howkQ+s0cVteHloBG0z
-4+EQ3XqF6dIKV5152evMpsfMwZ2bRQ85/Hh/9mZ/4KT8sja9e7tiaRpT80UAPNHZ
-RE+Op8IdQieMpEOFWF1VVm/oNKLWf4QYNSxaAti3hykqIyL5rCAPijcxDAryPjR2
-8HV8aVZPCjHw6ActzTyuMyuHx1Qq62821DUkM8Vy077zez1kSvAG0IuI5T5NEav5
-kvkpRCRws5Sgv2gMd3J7JpW9bA0RASQ1oiM0e58BkpxiBMbtuVrKF++cQ7TUXRL1
-cr+ol9SRGfNT/ESK4BRbn6ZIC72J5Jz9Ek2LsaANU28XoQSfRWUAMTQth4FR0vvQ
-AfyR2O2KNhv82+8UU9Fc8lxGA+eMwPdrqYlmjtJcnYwhsSHC0d2c5O8ZDl/7RL8V
-DX1arhWMn1fC04T0izeMdOktAhIebEarbRMYMSWerfEeuQxTvl0lgv+/z64YHtqL
-KBLeJc+720lWTEGGAkLysOfflQtlrbp3er8Hb1wacEfCB+OBPKf3+L/zqC8aAYSa
-OkmdkyB9mhKY3AZoaLJV
-=Lj0k
+iJwEAQEIAAYFAlH+Jz4ACgkQG7kqcTWJkGflJwP/c5bFm9wNsw3CmHlr+7wcseeY
+B+BuGBD8BzjnUL+Ydn9OzigW8wjiudBFU7kvk5A4ekakHI435ntZLDKq7f80P1IU
+03ibgYcvhsl5oy3KfRkCcDLTnbs21xFWfdjnU4RpeEZX/2TNx6f2j0IePAkXQJQn
+rDLcSY20GawOOIfLFRg=
+=yvPL
 -----END PGP SIGNATURE-----
