@@ -1,6 +1,6 @@
 # Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/eet/eet-1.7.4.ebuild,v 1.2 2013/04/01 19:39:00 tommy Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/eet/eet-1.7.8.ebuild,v 1.1 2013/08/04 10:04:39 tommy Exp $
 
 EAPI=2
 
@@ -11,10 +11,10 @@ HOMEPAGE="http://trac.enlightenment.org/e/wiki/Eet"
 SRC_URI="http://download.enlightenment.org/releases/${P}.tar.bz2"
 
 LICENSE="BSD-2"
-KEYWORDS="~amd64 ~arm ~x86"
+KEYWORDS="~amd64 ~arm ~ppc ~x86"
 IUSE="debug examples gnutls ssl static-libs test"
 
-RDEPEND=">=dev-libs/eina-1.7.0
+RDEPEND=">=dev-libs/eina-1.7.8
 	virtual/jpeg
 	sys-libs/zlib
 	gnutls? ( net-libs/gnutls
