@@ -2,15 +2,17 @@
 Hash: SHA256
 
 DIST evas-1.7.7.tar.bz2 9408256 SHA256 a53ba1f944db4369e56cb80ea782096d2135229711982c8adf95c7abe8f83fea SHA512 9976f9c1f2774335ab24eb3a7aff37bb582f83e96966e986729c46bd19f02063764f6c8a38ace37656d8440b192570c120d5614797b34c593156e8ec0abdf601 WHIRLPOOL 53eebbae1a3aa1e80a4a1783dbbec327f21dbef83fc33be50c67b2736784d0d3c0e5e1366264642cb47a453d9ed8dfd0c498f5cd17d8402d6fed7d4ae9d5975a
+DIST evas-1.7.8.tar.bz2 9453923 SHA256 9ce94f5da82aeb6fe571d9a648d8c4749ee86a7fb02c4132e3a2c145316d531c SHA512 e915beb930d9906ba6b2b2d768643aeb45f7cbf23786e3f7972992380b6f3a4a2bc08b290094f352c494721db74db6aac3c547ed11a8878a976c8e4fad8158b0 WHIRLPOOL 41151ac770742c27cf785c5e30d0f526fae1331633ed310514e0506e7d090e19cea9ea41da65de6d7eca1ba6a86e72a539ba89f520ad2a490f9b67ec9510f0fd
 EBUILD evas-1.7.7.ebuild 4039 SHA256 d71f109edde7e0afa84ef5560ac43696c19a4af2834fee589c9b3d398ad414f2 SHA512 b9634fe7d1ffd748f45c1c0ee8e2e7bc9c70ddd7c45d348b76242960d61c576089a449f0369f396f0a51ff65c974816fad87a4e10b99cca1db78a12a6a354d92 WHIRLPOOL 86a13778e4f93715834d5cc55e6e51baf22539d7f208bace5a533ee35bab51b86bc2560435a323b29fc4e9d5302f7ac2ef919d25b573f33d6baa620ca16c7bd3
-MISC ChangeLog 3982 SHA256 ea7dc0cf081e59cec4c8f550b5816367dbaba0d62b5b7a407a049390829f5670 SHA512 7c37bd2bc9000a86db734fb65bfd17bd491b997a1abc2907aa0c80a1fe0aee6ee57918b139d406294323624f877f11ab1382482b9e369e299c4fe8c96864fd9e WHIRLPOOL f89b9d154af114878ff2f5ac9c456b251f7dece1b8e1a4e3e3ea8ddb67549e34f3524dc8557310720e63f44d8db0d4998b5e36b7dcfc891fa07a083d952a9819
+EBUILD evas-1.7.8.ebuild 4039 SHA256 2581561a44351181002ccb1fdf51dc2785a982e0393454c7d01e1f1ffcceff28 SHA512 e37221bba731295b62a930c66cf10969c4ba84d4ade5b91b0c7f83f5435c3933b8d64ded45d7b70982a5a46f049e5dafb6d05a25b73ce8be91e599c288ccd531 WHIRLPOOL 4ef14008a80b0d7f52fdd080e084c59107c9c0e712e389cc4def3f348a4a0871ec9d03ac64eb5887624a74971a9c54588a41a79b78843cb9ccd9ff3784dec2c3
+MISC ChangeLog 4104 SHA256 d1004c82366ba77def342867e6975afef6f6cd9c18d0ba9c4428eae05add3c47 SHA512 9bf8b02df4475d85ad18042203af9bff3c38e7ef241c693527ca2103787094d1c326e0c9c0ca6e08a72a544dd6fc5c06027b7652a7134d890e5134d2ef9dff0c WHIRLPOOL 8d83b9943942b07ec10f455b6967940cb8ba65fc7cd5c4774668e17b86820ada536dbd63ac8926275cd1f31304f25d8c00cd68b505bd4742c371a1be8b85b3ca
 MISC metadata.xml 1703 SHA256 1d57b9419e6394389114428a96747ee6b099a5b80bc2e126351cd9a867a3039c SHA512 e8466b93faeccab1ea06ee9a6e13b1ec8c26633fa7ba5c62165248da0f01d461d089e7cccd124b6da48ff1a2bf9144bfc96c5a48226189df27132691aeaec35e WHIRLPOOL 89f39e887fa5983b30a2c7433d673b350a8da47284cdf54c4f7ed01e25c73fd7394914133f74baa269d46783d31f654d0ef7a4c7d98f5e947e41040ba4864df7
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.20 (GNU/Linux)
 
-iJwEAQEIAAYFAlGZ+LwACgkQG7kqcTWJkGdUcQQAkYwwDj9TZqxgqa05X78p8uRO
-IyeBNvYKx6R3grKCAF0ppSH161YYKGzRl57Atg49+RSqvkmkd+EM1d6Q9/SzK0oP
-XAqJXhZ2laNfZUb1VgecqXP+T3+1CboIwK1GuduTtr0LhI5TgnWyp+dlFT7ZmrWr
-UWFS01HAcZCxuigrwMw=
-=j0yg
+iJwEAQEIAAYFAlH+KBAACgkQG7kqcTWJkGcgdwP/SCQN7jdLp8oxcRi61F1w9Ofp
+yCH6X7O3BcyDFAZNNankJHP+3qS3r2bJeAXBbYJgEpXa3x7lYEDytXMY55AZUIdG
+Pgc5PhI8CWemNxrNA8NqKBueL/CKbL/jRYhYP4t3nlY+P1Up89FHmouIUTa/ZlF/
+YCJZemsPQLRhw2vyVjo=
+=vllw
 -----END PGP SIGNATURE-----
