@@ -1,13 +1,0 @@
-DEFINED_PHASES=compile configure install prepare unpack
-DEPEND=>=dev-libs/eina-1.7.0 virtual/jpeg sys-libs/zlib gnutls? ( net-libs/gnutls dev-libs/libgcrypt ) !gnutls? ( ssl? ( dev-libs/openssl ) ) test? ( dev-libs/check dev-util/lcov ) doc? ( app-doc/doxygen )
-DESCRIPTION=E file chunk reading/writing library
-EAPI=2
-HOMEPAGE=http://trac.enlightenment.org/e/wiki/Eet
-IUSE=debug examples gnutls ssl static-libs test nls doc
-KEYWORDS=~amd64 ~arm ~x86
-LICENSE=BSD-2
-RDEPEND=>=dev-libs/eina-1.7.0 virtual/jpeg sys-libs/zlib gnutls? ( net-libs/gnutls dev-libs/libgcrypt ) !gnutls? ( ssl? ( dev-libs/openssl ) ) nls? ( sys-devel/gettext )
-SLOT=0
-SRC_URI=http://download.enlightenment.org/releases/eet-1.7.4.tar.bz2
-_eclasses_=enlightenment	59018f068e8f700839d3c75f86495011	eutils	63afaaed8aa819fdcb814c7cd39495a2	libtool	b1c8688e60f9580bcb9bb46e08737eb1	multilib	892e597faee02a5b94eb02ab512e7622	toolchain-funcs	7ffd28a8c7eea27218865352bfd3ab2f	user	d0a4d0735a6c0183d707ca919bd72f28
-_md5_=7e76daa2d0d8a0f2328d9dc7bd049b49
