@@ -1,0 +1,13 @@
+DEFINED_PHASES=compile configure install postinst prepare unpack
+DEPEND=>=dev-libs/eina-1.7.8 >=media-libs/freetype-2.3.9 fontconfig? ( media-libs/fontconfig ) gles? ( media-libs/mesa[gallium,gles2] ) gif? ( media-libs/giflib ) jpeg? ( virtual/jpeg ) png? ( media-libs/libpng:0= ) bidi? ( >=dev-libs/fribidi-0.19.1 ) directfb? ( >=dev-libs/DirectFB-0.9.16 ) tiff? ( media-libs/tiff ) wayland? ( dev-libs/wayland ) xpm? ( x11-libs/libXpm ) X? ( x11-libs/libX11 x11-libs/libXext x11-libs/libXrender opengl? ( virtual/opengl ) ) !X? ( xcb? ( x11-libs/xcb-util ) ) eet? ( >=dev-libs/eet-1.7.8 ) doc? ( app-doc/doxygen )
+DESCRIPTION=hardware-accelerated retained canvas API
+EAPI=5
+HOMEPAGE=http://trac.enlightenment.org/e/wiki/Evas
+IUSE=altivec bidi +bmp directfb +eet fbcon +fontconfig gles gif +ico +jpeg mmx opengl +png +ppm +psd sse sse3 static-libs tga tiff wayland X xcb xpm nls doc
+KEYWORDS=~amd64 ~arm ~ppc ~x86
+LICENSE=BSD-2
+RDEPEND=>=dev-libs/eina-1.7.8 >=media-libs/freetype-2.3.9 fontconfig? ( media-libs/fontconfig ) gles? ( media-libs/mesa[gallium,gles2] ) gif? ( media-libs/giflib ) jpeg? ( virtual/jpeg ) png? ( media-libs/libpng:0= ) bidi? ( >=dev-libs/fribidi-0.19.1 ) directfb? ( >=dev-libs/DirectFB-0.9.16 ) tiff? ( media-libs/tiff ) wayland? ( dev-libs/wayland ) xpm? ( x11-libs/libXpm ) X? ( x11-libs/libX11 x11-libs/libXext x11-libs/libXrender opengl? ( virtual/opengl ) ) !X? ( xcb? ( x11-libs/xcb-util ) ) eet? ( >=dev-libs/eet-1.7.8 ) nls? ( sys-devel/gettext )
+SLOT=0
+SRC_URI=http://download.enlightenment.org/releases/evas-1.7.8.tar.bz2
+_eclasses_=enlightenment	59018f068e8f700839d3c75f86495011	eutils	63afaaed8aa819fdcb814c7cd39495a2	libtool	b1c8688e60f9580bcb9bb46e08737eb1	multilib	892e597faee02a5b94eb02ab512e7622	toolchain-funcs	7ffd28a8c7eea27218865352bfd3ab2f	user	d0a4d0735a6c0183d707ca919bd72f28
+_md5_=6b759ed3f295826ccce5ad3bfc310db1
