@@ -1,6 +1,11 @@
 # ChangeLog for media-libs/evas
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/evas/ChangeLog,v 1.25 2013/05/20 10:19:34 tommy Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/evas/ChangeLog,v 1.26 2013/08/04 10:08:10 tommy Exp $
+
+*evas-1.7.8 (04 Aug 2013)
+
+  04 Aug 2013; Thomas Sachau (Tommy[D]) <tommy@gentoo.org> +evas-1.7.8.ebuild:
+  Version bump
 
 *evas-1.7.7 (20 May 2013)
 
