@@ -1,6 +1,12 @@
 # ChangeLog for dev-libs/eet
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/eet/ChangeLog,v 1.28 2013/04/24 08:26:45 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/eet/ChangeLog,v 1.29 2013/08/04 10:04:39 tommy Exp $
+
+*eet-1.7.8 (04 Aug 2013)
+
+  04 Aug 2013; Thomas Sachau (Tommy[D]) <tommy@gentoo.org> +eet-1.7.8.ebuild,
+  -eet-1.7.4.ebuild:
+  Version bump, drop old
 
   24 Apr 2013; Agostino Sarubbo <ago@gentoo.org> eet-1.7.6.ebuild:
   Add ~ppc, wrt bug #462050
